--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #################################
 
 #driverName:serverName://hostName:portNumber/databaseName
-spring.datasource.url= jdbc:mysql://localhost:3308/bitproject
+spring.datasource.url= jdbc:mysql://localhost:3308/steam
 spring.datasource.username=root
 spring.datasource.password=1234
 
